2012-03-30  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Correction: backtracking does NOT take place into a block
	which completed.

2012-03-30  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Documenting the debugger with an example session.

2012-03-30  Kaz Kylheku  <kaz@kylheku.com>

	Version 63

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES: Updated.

2012-03-30  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (num_str): Much more accurate test for deciding whether
	to treat the number as floating or integer. We can't just look
	for the presence of E, e or . because these coudl be part of
	trailing junk for instance "123XYZE." should convert
	to the integer 123, where "XYZE." is trailing junk.

	* txr.1: Documented int-str, flo-str and num-str.

2012-03-29  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (numeq): Fix misplaced parenthesis.

2012-03-29  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (min2, max2): Semantics tweak. If the numbers are equal,
	favor the left one.

	* txr.1: Documented min and max.

2012-03-29  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (numeq): New function.
	(exptmod): Bugfix: was no normalizing the bignum, ouch.
	Also was reporting "non-integral operands" for other
	errors.

	* eval.c (eval_init): Registered = intrinsic function.

	* lib.c (numeqv): New function.

	* lib.h (numeq, numeqv): Declared.

	* txr.1: Documented expt, sqrt, isqrt, exptmod, fixnump, bignump,
	integerp, floatp, numberp, zerop, evenp, oddp, >, <, >=, <= and =.

	* txr.vim: Highlight =

2012-03-29  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (gcd): Allow zeros. Don't issue "non-integral"
	exception if MPI fails.
	(floorf, ceili): Map integer argument to itself.
	(tang, asine, acosi): New functions.

	* eval.c (eval_init): New intrinsics: tan, asin, acos.

	* lib.h (tang, asine, acosi): Declared.

	* txr.1: Documented gcd, abs, floor, ceil, sin, cos, tan
	asin, acos, atan, log, and exp.
